--- a/views/root.ejs
+++ b/views/root.ejs
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
+<head>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+</head>
 <body>
 <h1>Welcome</h1>
-<ul>Instructions:</ul>
-<li>To announce to #t-lunch channel, say "Lunch is here"</li>
+<ul><h3>Instructions:</h3>
+    <li>To announce to #t-lunch channel, say "Lunch is here"</li>
+</ul>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.2.0/prototype.js"></script>
 <script>
+    console.log(jQuery)
     if (annyang) {
         console.log('annyang ready!');
         // Let's define our first command. First the text we expect, and then the function it should call
@@ -24,14 +30,16 @@
 
 
     function lunchHere() {
-        new Ajax.Request('/api/slack/lunch', {
-            method: 'post',
-            postBody: {'text': 'lunch is here'},
-            onSuccess: function (response) {
-                alert('Sent to t-lunch channel!')
+        jQuery.post({
+            type: 'POST',
+            url: '/api/slack/lunch',
+            data: {'text': 'lunch is here'},
+            dataType: 'json',
+            success: function (data) {
+                alert('Sent to #t-lunch channel')
             },
-            onFailure: function (err) {
-                alert(err)
+            failure: function (data) {
+                alert('ERROR')
             }
         });
     }
